#124 [Wandy, Isa] Correcting space between articles on mobile layout

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -71,7 +71,9 @@
   }
 
   article{
-    margin-bottom: 40px;
+    @include media-query(MEDIUM) {
+      margin-bottom: 40px;
+    }
   }
 }
 
